src/main/java/com/example/tea_app_test/registration/errors/ExceptionHandlerController.java
package com.example.tea_app_test.registration.errors;

import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.ExceptionHandler;

/*
@ControllerAdvice
public class ExceptionHandlerController {

    @ExceptionHandler(Exception.class)
    public ResponseEntity<Exception> userNotFound(Exception e) {
        System.out.println(e);
        //System.out.println("userNotFound");
        return ResponseEntity.badRequest().body(e);
    }
    */
/*@ExceptionHandler(UserExistException.class)
    public ResponseEntity<UserExistException> userExist(UserExistException e) {
        System.out.println("userExist");
        return ResponseEntity.badRequest().body(e);
    }*//*


    @ExceptionHandler(UserNotFoundException.class)
    public ResponseEntity<UserNotFoundException> userNotFound(UserNotFoundException e) {
        System.out.println("userNotFound");
        return ResponseEntity.badRequest().body(e);
    }
}*/
